--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,9 @@ on:
     branches: [main]
 
 permissions:
-  contents: write
+  pages: write
+  id-token: write
+  contents: read
 
 jobs:
   deploy:
@@ -20,15 +22,14 @@ jobs:
           cache: npm
 
       - run: npm ci
+      - run: npm run lint
 
-      - run: npm run predeploy
+      # Upload static site
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./src
 
-      - name: Configure git identity
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
+      # Deploy
       - name: Deploy to GitHub Pages
-        run: npm run deploy
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: actions/deploy-pages@v4
