--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,13 +5,16 @@ on:
     branches: [main]
 
 permissions:
+  contents: read
   pages: write
   id-token: write
-  contents: read
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
+    environment:
+      name: github-pages
 
     steps:
       - uses: actions/checkout@v4
@@ -24,12 +27,10 @@ jobs:
       - run: npm ci
       - run: npm run lint
 
-      # Upload static site
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./src
 
-      # Deploy
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
