--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-html": "^8.1.1",
     "gh-pages": "^6.1.1",
+    "globals": "^16.5.0",
     "prettier": "^3.2.5"
   },
   "eslintConfig": {
