--- a/.github/workflows/health.yml
+++ b/.github/workflows/health.yml
@@ -2,7 +2,7 @@ name: Nightly health checks
 
 on:
   schedule:
-    - cron: "0 6 * * *" # daily at 06:00 UTC
+    - cron: '0 6 * * *' # daily at 06:00 UTC
   workflow_dispatch:
 
 jobs:
